src/objects/Budget__c.object
<CustomObject>
    <fields>
        <fullName>Allocated_Budget__c</fullName>
        <label>Allocated Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Spent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Budget__c</fullName>
        <formula>Allocated_Budget__c - Budget_Spent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Allocated_Budget__c</columns>
        <columns>Budget_Spent__c</columns>
        <columns>Remaining_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Budget # - {0000}</displayFormat>
        <label>Budget Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cannot_change_budget_user</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( User__c )</errorConditionFormula>
        <errorMessage>The user of an existing budget cannot be changed. If the budget is incorrect, please delete the budget and create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cap_Budget_Spent</fullName>
        <active>true</active>
        <description>budget spent cannot exceed allocated amount</description>
        <errorConditionFormula>Allocated_Budget__c  &lt;  Budget_Spent__c</errorConditionFormula>
        <errorMessage>Budget spent cannot exceed allocated budget</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Allocated_Budget</fullName>
        <active>true</active>
        <description>allocated budget cannot be less than or equal to 0</description>
        <errorConditionFormula>Allocated_Budget__c   &lt;= 0</errorConditionFormula>
        <errorDisplayField>Allocated_Budget__c</errorDisplayField>
        <errorMessage>Allocated budget must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_cannot_edit_their_own_budget</fullName>
        <active>true</active>
        <errorConditionFormula>$User.Id =  User__c</errorConditionFormula>
        <errorMessage>Sorry, you cannot change your own budget.</errorMessage>
    </validationRules>
</CustomObject>